# MilesOfEmpowerment

./: LICENSE
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
hair_project/: db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
hair_project/authController/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hair_project/authController/management/commands/: create_admin.py
hair_project/authController/migrations/: 0001_initial.py
hair_project/authController/templates/authController/htmls/: email.html
hair_project/companyController/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
hair_project/companyController/migrations/: 0001_initial.py
hair_project/hair_project/: asgi.py  corsmiddleware.py  settings.py  urls.py  wsgi.py
hair_project/templates/admin/: base_site.html
